<resources>
    <string name="app_name">Click</string>
    <string name="space">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="attach_photo">&#58288;</string>
    <string name="SexFemale">Женский</string>
    <string name="SexMale">Мужской</string>
    <string name="SexAll">Любой</string>
    <string name="SexNot">Не указан</string>
    <string name="SexNot2">Не указывать</string>
    <string name="Age1">год</string>
    <string name="Age2">года</string>
    <string name="Age3">лет</string>
    <string name="AgeFrom">от</string>
    <string name="AgeTo">до</string>
    <string name="AgeNot">Не указан</string>
    <string name="StatusOnline">● В сети</string>
    <string name="StatusOffline">● Нет в сети</string>
    <string name="StatusOfflineTime1">● Был сегодня в %s</string>
    <string name="StatusOfflineTime2">● Была сегодня в %s</string>
    <string name="StatusOfflineTime3">● Был(а) сегодня в %s</string>
    <string name="StatusOfflineTime4">● Был %1$s в %2$s</string>
    <string name="StatusOfflineTime5">● Была %1$s в %2$s </string>
    <string name="StatusOfflineTime6">● Был(а) %1$s в %2$s</string>
    <string name="DistanceNear">Рядом</string>
    <string name="DateNot">Не указана</string>
    <string name="You">Вы</string>
    <string name="Error">Ошибка</string>
    <string name="Stop">Остановлено</string>
    <string name="Load">Загружается</string>
	<string name="SelectCountry">Указать страну</string>
	<string name="SelectCity">Указать город</string>
	<string name="Russia">Россия</string>
	<string name="Delivery">Рассылка</string>
    <string name="Notification1">У Вас %d новое сообщение</string>
    <string name="Notification234">У Вас %d новых сообщения</string>
    <string name="Notification567890">У Вас %d новых сообщений</string>
    <string name="Time0">Менее минуты</string>
    <string name="Time1">мин.</string>
    <string name="Time2">Менее получаса</string>
    <string name="Time3">Менее часа</string>
    <string name="Time4">Менее 2 часов</string>
    <string name="Time5">Менее дня</string>
	<string name="Next">ПРОДОЛЖИТЬ</string>
    <string name="OkNext">ПРИНЯТЬ И ПРОДОЛЖИТЬ</string>
    <string name="Cancel">ЗАКРЫТЬ</string>
    <string name="Change">ИЗМЕНИТЬ</string>
    <string name="OK">OK</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="Dialog0Title">Не реализовано</string>
    <string name="Dialog0Description">Не реализовано</string>
    <string name="Dialog1Title">Ошибка сети</string>
    <string name="Dialog1Description">Не удалось получить данные пользователя</string>
    <string name="Dialog2Title">Ошибка сети</string>
    <string name="Dialog2Description">Не удалось получить данные рассылки</string>
    <string name="Dialog3Title">Ошибка сети</string>
    <string name="Dialog3Description">Не удалось получить данные пользователей</string>
    <string name="Dialog4Title">Ошибка</string>
    <string name="Dialog4Description">Нельзя просматривать свойства рассылки, если Вы не её автор</string>
    <string name="Dialog5Title">Ошибка данных</string>
    <string name="Dialog5Description">Получены не корректные данные рассылки</string>
    <string name="Dialog6Title">Ошибка данных</string>
    <string name="Dialog6Description">Получены не корректные данные пользователя</string>
    <string name="Dialog7Title">Ошибка данных</string>
    <string name="Dialog7Description">Получены не корректные данные пользователей</string>
    <string name="Dialog8Title">Ошибка</string>
    <string name="Dialog8Description">Укажите тему</string>
    <string name="Dialog9Title">Ошибка</string>
    <string name="Dialog9Description">Укажите хотя бы двух пользователей</string>
    <string name="Dialog10Title">Ошибка сети</string>
    <string name="Dialog10Description">Не удалось отправить данные об создании группы на сервер</string>
    <string name="Dialog11Title">Ошибка сети</string>
    <string name="Dialog11Description">Не удалось отправить данные об обновлении группы на сервер</string>
    <string name="Dialog12Title">Ошибка данных</string>
    <string name="Dialog12Description">Не удалось создать группу</string>
    <string name="Dialog13Title">Ошибка данных</string>
    <string name="Dialog13Description">Не удалось обновить группу</string>
    <string name="Dialog14Title">Ошибка сети</string>
    <string name="Dialog14Description">Не удалось отправить данные об создании или обновлении рассылки на сервер</string>
    <string name="Dialog15Title">Ошибка данных</string>
    <string name="Dialog15Description">Не удалось создать или обновить рассылку</string>
    <string name="Dialog16Title">Ошибка</string>
    <string name="Dialog16Description">Необходимо выбрать город</string>
    <string name="Dialog17Title">Ошибка сети</string>
    <string name="Dialog17Description">Не удалось получить список городов</string>
    <string name="Dialog18Title">Ошибка</string>
    <string name="Dialog18Description">Необходимо указать логин</string>
    <string name="Dialog19Title">Ошибка</string>
    <string name="Dialog19Description">Дождитесь загрузки данных о пользователе</string>
    <string name="Dialog20Title">Ошибка данных</string>
    <string name="Dialog20Description">Получены не корректные данные при проверки пользователя</string>
    <string name="Dialog21Title">Ошибка данных</string>
    <string name="Dialog21Description">Получены не корректные данные при проверки кода</string>
    <string name="Dialog22Title">Ошибка сети</string>
    <string name="Dialog22Description">Не получилось очистить список друзей</string>
    <string name="Dialog23Title">Ошибка сети</string>
    <string name="Dialog23Description">Не получилось обновить данные профиля</string>
    <string name="Dialog24Title">Ошибка сети</string>
    <string name="Dialog24Description">Не получилось создать профиль пользователя</string>
    <string name="Dialog25Title">Ошибка данных</string>
    <string name="Dialog25Description">Не получилось обновить данные профиля</string>
    <string name="Dialog26Title">Ошибка данных</string>
    <string name="Dialog26Description">Не получилось создать профиль пользователя</string>
    <string name="Dialog27Title">Ошибка данных</string>
    <string name="Dialog27Description">Не получилось очистить список друзей</string>
    <string name="Dialog28Title">Ошибка</string>
    <string name="Dialog28Description">Пользователь не прошел проверку</string>
    <string name="Dialog29Title">Ошибка</string>
    <string name="Dialog29Description">Пользователь не найден</string>
    <string name="Dialog30Title">Ошибка</string>
    <string name="Dialog30Description">Пользователь заблокирован</string>
    <string name="Dialog31Title">Ошибка</string>
    <string name="Dialog31Description">Пользователь зашел с другого устройства</string>
    <string name="Dialog32Title">Ошибка</string>
    <string name="Dialog32Description">Пользователь не активирован</string>
    <string name="Dialog33Title">Ошибка сети</string>
    <string name="Dialog33Description">Не удалось получить данные группы</string>
    <string name="Dialog34Title">Ошибка данных</string>
    <string name="Dialog34Description">Получены не корректные данные группы</string>
    <string name="Dialog35Title">Ошибка</string>
    <string name="Dialog35Description">Не удалось записать голосовое сообщение</string>
    <string name="Dialog36Title">Ошибка</string>
    <string name="Dialog36Description">Не удалось сформировать сообщение</string>
    <string name="Dialog37Title">Ошибка</string>
    <string name="Dialog37Description">Не удалось записать видео файл</string>
    <string name="Dialog38Title">Ошибка</string>
    <string name="Dialog38Description">Не удалось получить фотографию</string>
    <string name="Dialog39Title">Ошибка</string>
    <string name="Dialog39Description">Нельзя переслать сообщение, в котором есть не загруженные данные</string>
    <string name="Dialog40Title">Ошибка</string>
    <string name="Dialog40Description">Нельзя удалить сообщение, которое уже получил пользователь</string>
    <string name="Dialog41Title">Ошибка сети</string>
    <string name="Dialog41Description">Не удалось послать команду на сервер для удаления сообщения</string>
    <string name="Dialog42Title">Ошибка сети</string>
    <string name="Dialog42Description">Не удалось послать команду на сервер для удаления истории сообшений</string>
    <string name="Dialog43Title">Ошибка</string>
    <string name="Dialog43Description">Нельзя удалять чужие сообщения</string>
    <string name="Dialog44Title">Ошибка</string>
    <string name="Dialog44Description">Нельзя удалить сообщение, которое уже отправили на сервер</string>
    <string name="Dialog45Title">Ошибка</string>
    <string name="Dialog45Description">Не удалось получить геоданные</string>
    <string name="Dialog46Title">Ошибка</string>
    <string name="Dialog46Description">Нельзя переслать временное сообщение</string>
    <string name="Dialog47Title">Ошибка</string>
    <string name="Dialog47Description">С этим пользователем нет диалогов</string>
    <string name="Dialog48Title">Выполнено</string>
    <string name="Dialog48Description">Диалог успешно очистен</string>
    <string name="Dialog49Title">Ошибка</string>
    <string name="Dialog49Description">Не удалось открыть файл</string>
    <string name="Dialog50Title">Ошибка</string>
    <string name="Dialog50Description">Вы не являетесь членом группы</string>
    <string name="Dialog51Title">Удалить друга</string>
    <string name="Dialog51Description">Вы действительно хотите удалить пользователя из списка друзей?</string>
    <string name="Dialog52Title">Не верные данные</string>
    <string name="Dialog52Description">Вам должны быть страше 14 лет</string>
    <string name="AvatarCamera">Камера</string>
    <string name="AvatarGallery">Галерея</string>
    <string name="AvatarDelete">Удалить</string>
    <string name="MenuChats">Чаты</string>
    <string name="MenuContacts">Контакты</string>
    <string name="MenuList">Список</string>
    <string name="MenuMap">Карта</string>
    <string name="ChatsSecretEmpty">Для дальнейшего доступа в секретный раздел Вам необходимо установить четырехзначный код доступа. Код доступа невозможно восстановить. При смене кода доступа все чаты из секретного раздела удаляются.</string>
    <string name="SMSTitle">Подтверждение номера</string>
    <string name="SMSText">Введите код доступа из SMS сообщения</string>
    <string name="SMSHint">Введите код доступа</string>
    <string name="SMSError">Вы ввели неверный код доступа</string>
    <string name="SMSCode1">Код доступа выслан вам в SMS.</string>
    <string name="SMSCode2">Введите полученный код</string>
    <string name="SMSRepeat">ВЫСЛАТЬ КОД ДОСТУПА ПОВТОРНО</string>
    <string name="WelcomeHeader">Добро пожаловать</string>
    <string name="WelcomeText">Для завершения установки Вам необходимо заполнить профиль с личными данными</string>
	<string name="SettingSecurityTitle">Настройка безопасности</string>
	<string name="SettingSecurityBlack">Заблокированные пользователи</string>
	<string name="SettingSecurityAdd">Добавить</string>
	<string name="SettingSecurityList">Список</string>
	<string name="SettingSecurityStatus">Кто может видеть мой статус</string>
	<string name="SettingSecurityStatus1">Все</string>
	<string name="SettingSecurityStatus2">Мои контакты</string>
	<string name="SettingSecurityStatus3">Никто</string>
	<string name="SettingSecurityPinReset">Сбросить ПИНкод</string>
	<string name="SettingSecuritySecret">ПИНкод для секретных чатов</string>
	<string name="SettingSecurityYesPin">Чтобы изменить ПИНкод, введите текущий для подтверждения</string>
	<string name="SettingSecurityOld">Текущий ПИНкод</string>
	<string name="SettingSecurityNew">Новый ПИНкод</string>
	<string name="SettingSecuritySubmit">Подтвердите</string>
</resources>