<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundFilter"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/BackgroundFilter" >

        <ImageView
            android:id="@+id/ivSMSBack"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/selector_back" />

        <TextView
            android:id="@+id/tvSMSTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/SMSTitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/SMSText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/TextBlack" />

            <EditText
                android:id="@+id/etSMSCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/drawable_et_line"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/SMSHint"
                android:inputType="phone"
                android:textColor="@color/TextSub" />

            <LinearLayout
                android:id="@+id/llSMSError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/tvSMSError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/SMSError"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/TextRed" />

                <ImageView
                	android:id="@+id/ivSMSError"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_error_2" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSMS1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="15dp"
                android:text="@string/SMSCode1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextSub" />

            <TextView
                android:id="@+id/tvSMS2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/SMSCode2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextSub" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pbSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btnSMSRepeat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:background="@drawable/selector_btn_white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/SMSRepeat"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_btn_blue" />

    <Button
        android:id="@+id/btnSMSNext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@drawable/selector_btn_blue_shadow"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/Next"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_btn_white" />

</LinearLayout>