<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/BackgroundDialog"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/drawable_dialog"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:id="@+id/tvWelcomeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/WelcomeHeader"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/TextBlack" />

            <TextView
                android:id="@+id/tvWelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WelcomeText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextSub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/btnWelcomeNext"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/selector_btn_white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Next"
                android:textColor="@color/color_btn_blue"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>